==> particle-iot/device-os/hal/src/rtl872x/core_hal.c <==
#include "core_hal.h"
#include "service_debug.h"
#include "rtl8721d.h"
#include "hal_event.h"
#include <FreeRTOS.h>
#include <task.h>
#include <semphr.h>
#include "hw_config.h"
#include "syshealth_hal.h"
#include "button_hal.h"
#include "hal_platform.h"
#include "dct.h"
#include "rng_hal.h"
#include "interrupts_hal.h"
#include "ota_module.h"
#include "bootloader.h"
#include <stdlib.h>
#include <malloc.h>
#include "rtc_hal.h"
#include "timer_hal.h"
#include "pinmap_impl.h"
#include "system_error.h"
#include "usb_hal.h"
#include "usart_hal.h"
#include "system_error.h"
#include "gpio_hal.h"
#include "exflash_hal.h"
#include "flash_common.h"
#include "concurrent_hal.h"
#include "user_hal.h"
#include "backup_ram_hal.h"
#include "heap_portable.h"

void HAL_Core_Config(void) {

    irq_table_init(MSP_RAM_HP_NS);

    DECLARE_SYS_HEALTH(ENTERED_SparkCoreConfig);

#ifdef DFU_BUILD_ENABLE
    USE_SYSTEM_FLAGS = 1;
#endif

    /* Forward interrupts */
    // memcpy(&link_ram_interrupt_vectors_location, &link_interrupt_vectors_location, (uintptr_t)&link_ram_interrupt_vectors_location_end-(uintptr_t)&link_ram_interrupt_vectors_location);
    // uint32_t* isrs = (uint32_t*)&link_ram_interrupt_vectors_location;
    // SCB->VTOR = (uint32_t)isrs;

#if HAL_PLATFORM_PROHIBIT_XIP
    prohibit_xip();
#endif

    Set_System();

    hal_timer_init(NULL);

    HAL_Core_Setup_override_interrupts();

    HAL_RNG_Configuration();

#if defined(MODULAR_FIRMWARE)
    const module_info_dynamic_location_ext_t* dyn = NULL;
    const uint8_t* user_end = (const uint8_t*)module_user.end_address - sizeof(uint32_t);
    const uint16_t* suffix_size = (const uint16_t*)(user_end - sizeof(uint16_t)) /* module_info_suffix_t::size */;
    for (const uint8_t* addr = user_end - *suffix_size; addr < user_end - MODULE_INFO_SUFFIX_NONEXT_DATA_SIZE;) {
        const module_info_extension_t* ext = (const module_info_extension_t*)(addr);
        if (ext->type == MODULE_INFO_EXTENSION_DYNAMIC_LOCATION) {
            if (ext->length >= sizeof(module_info_dynamic_location_ext_t)) {
                dyn = (const module_info_dynamic_location_ext_t*)ext;
                break;
            }
        } else if (ext->type == MODULE_INFO_EXTENSION_INVALID || ext->type == MODULE_INFO_EXTENSION_END) {
            break;
        }
    }

    // Previous scheme was:
    // End of current system-part1 aligned to 4KB
    // uint32_t system_part_aligned_end = (((uint32_t)&link_module_info_crc_end) & 0xFFFFF000) + 0x1000; // 4K aligned, erasure
    
    // With introduction of assets the layout is now [system-part1 up to 1.5MB, asset fs up to 1.125MB, OTA up to 1.5MB, user part up to 1.5MB]
    module_ota.start_address = (uint32_t)&link_module_start + 0x180000 /* max system-part1 size */ + 0x120000 /* asset fs max size */;

    uint32_t ota_end_address = 0;
    if (dyn) {
        ota_end_address = ((uint32_t)dyn->module_start_address) & 0xFFFFF000; // Align to 4KB
        if (ota_end_address >= module_ota.start_address + 0x180000) {
            // Should have 1.5M for the OTA region at the least
            module_user.start_address = (uint32_t)dyn->module_start_address;
        } else {
            // Invalid user module
            dyn = NULL;
        }
    }

    if (!dyn) {
        module_user.start_address = module_user.end_address;
    }

    if (dyn) {
        // This will also perform CRC checks etc
        hal_user_module_descriptor user_desc = {};
        if (!hal_user_module_get_descriptor(&user_desc)) {
            dynalib_table_location = (void*)dyn->dynalib_load_address; // dynalib table in flash
            uintptr_t new_sram_heap_end = (uintptr_t)user_desc.pre_init();
            if (new_sram_heap_end < (uintptr_t)malloc_heap_regions[HAL_PLATFORM_HEAP_REGION_SRAM].end) {
                malloc_heap_regions[HAL_PLATFORM_HEAP_REGION_SRAM].end = (void*)new_sram_heap_end;
            }
            dynalib_table_location = (void*)dyn->dynalib_start_address; // dynalib in PSRAM
            module_ota.end_address = ota_end_address;

            malloc_heap_regions[HAL_PLATFORM_HEAP_REGION_PSRAM].end = (void*)dyn->dynalib_start_address;
        } else {
            module_ota.end_address = module_ota.start_address + module_ota.maximum_size;
        }
    }
#endif

    // Disable XIP after user module pre_init
    hal_exflash_disable_xip();

    malloc_set_heap_regions(malloc_heap_regions, HAL_PLATFORM_HEAP_REGIONS);

    // Enable malloc before littlefs initialization.
    malloc_enable(1);

#ifdef DFU_BUILD_ENABLE
    Load_SystemFlags();
#endif

    // TODO: Use current LED theme
    if (HAL_Feature_Get(FEATURE_LED_OVERRIDDEN)) {
        // Just in case
        LED_Off(PARTICLE_LED_RGB);
    } else {
        LED_SetRGBColor(RGB_COLOR_WHITE);
        LED_On(PARTICLE_LED_RGB);
    }
}

void HAL_Core_Setup(void) {
    /* DOES NOT DO ANYTHING
     * SysTick is enabled within FreeRTOS
     */
    HAL_Core_Config_systick_configuration();

    if (bootloader_update_if_needed()) {
        HAL_Core_System_Reset();
    }

    // Initialize stdlib PRNG with a seed from hardware RNG
    srand(HAL_RNG_GetRandomNumber());

    // This was originally happening in Set_System(), which is called before malloc is enabled,
    // and global constructors have executed, but interrupt HAL can only be accessed after both of those things happened.
    hal_button_init(HAL_BUTTON1, HAL_BUTTON_MODE_EXTI);

    hal_backup_ram_init();

    // Note: the rtc module has retained data, so hal_backup_ram_init() should be called first.
    hal_rtc_init();

#if !defined(MODULAR_FIRMWARE) || !MODULAR_FIRMWARE
    module_user_init_hook();
#endif
}

bool HAL_Core_Mode_Button_Pressed(uint16_t pressedMillisDuration) {
    bool pressedState = false;

    if(hal_button_get_debounce_time(HAL_BUTTON1) >= pressedMillisDuration) {
        pressedState = true;
    }
    if(hal_button_get_debounce_time(HAL_BUTTON1_MIRROR) >= pressedMillisDuration) {
        pressedState = true;
    }

    return pressedState;
}

void HAL_Core_System_Reset_Ex(int reason, uint32_t data, void *reserved) {
    if (HAL_Feature_Get(FEATURE_RESET_INFO)) {
        // Save reset info to backup registers
        HAL_Core_Write_Backup_Register(BKP_DR_02, reason);
        HAL_Core_Write_Backup_Register(BKP_DR_03, data);
    }

    HAL_Core_System_Reset();
}

void HAL_Core_Enter_Safe_Mode(void* reserved) {
    HAL_Core_Write_Backup_Register(BKP_DR_01, ENTER_SAFE_MODE_APP_REQUEST);
    HAL_Core_System_Reset_Ex(RESET_REASON_SAFE_MODE, 0, NULL);
}

void HAL_Core_Enter_Bootloader(bool persist) {
    if (persist) {
        HAL_Core_Write_Backup_Register(BKP_DR_10, 0xFFFF);
        system_flags.FLASH_OTA_Update_SysFlag = 0xFFFF;
        Save_SystemFlags();
    } else {
        HAL_Core_Write_Backup_Register(BKP_DR_01, ENTER_DFU_APP_REQUEST);
    }

    HAL_Core_System_Reset_Ex(RESET_REASON_DFU_MODE, 0, NULL);
}

bool HAL_Core_System_Reset_FlagSet(RESET_TypeDef resetType) {
    // NOTE: this is a no-op, BOOT_Reason() is normally used instead
    uint32_t reset_reason = SYSTEM_FLAG(RCC_CSR_SysFlag);
    if (reset_reason == 0xffffffff) {
        reset_reason = BOOT_Reason();
    }
    reset_reason = BOOT_Reason();
    switch(resetType) {
        case SOFTWARE_RESET: {
            if (BKUP_Read(BKUP_REG1) != 0xdeadbeef) {
                return false;
            }
            return (reset_reason & (BIT_BOOT_KM4SYS_RESET_HAPPEN | BIT_BOOT_SYS_RESET_HAPPEN));
        }
        case WATCHDOG_RESET: {
            return (reset_reason & (BIT_BOOT_KM4WDG_RESET_HAPPEN | BIT_BOOT_WDG_RESET_HAPPEN));
        }
        case POWER_MANAGEMENT_RESET: {
            // Deep sleep wake-up
            return (reset_reason & BIT_BOOT_DSLP_RESET_HAPPEN);
        }
        case POWER_BROWNOUT_RESET: {
            return (reset_reason & BIT_BOOT_BOD_RESET_HAPPEN);
        }
        // If none of the reset sources are flagged, this indicates
        // a power-on reset or pin reset
        case PIN_RESET:
        case POWER_DOWN_RESET: {
            return reset_reason == 0;
        }
        default: {
            return false;
        }
    }
    return false;
}

static void Init_Last_Reset_Info()
{
    if (HAL_Core_System_Reset_FlagSet(SOFTWARE_RESET))
    {
        // Load reset info from backup registers
        last_reset_info.reason = HAL_Core_Read_Backup_Register(BKP_DR_02);
        last_reset_info.data = HAL_Core_Read_Backup_Register(BKP_DR_03);
        // Clear backup registers
        HAL_Core_Write_Backup_Register(BKP_DR_02, 0);
        HAL_Core_Write_Backup_Register(BKP_DR_03, 0);
    }
    else // Hardware reset
    {
        if (HAL_Core_System_Reset_FlagSet(WATCHDOG_RESET))
        {
            last_reset_info.reason = RESET_REASON_WATCHDOG;
        }
        else if (HAL_Core_System_Reset_FlagSet(POWER_MANAGEMENT_RESET))
        {
            last_reset_info.reason = RESET_REASON_POWER_MANAGEMENT; // Reset generated when entering standby mode (nRST_STDBY: 0)
        }
        else if (HAL_Core_System_Reset_FlagSet(POWER_DOWN_RESET))
        {
            last_reset_info.reason = RESET_REASON_POWER_DOWN;
        }
        else if (HAL_Core_System_Reset_FlagSet(POWER_BROWNOUT_RESET))
        {
            last_reset_info.reason = RESET_REASON_POWER_BROWNOUT;
        }
        else if (HAL_Core_System_Reset_FlagSet(PIN_RESET)) // Pin reset flag should be checked in the last place
        {
            last_reset_info.reason = RESET_REASON_PIN_RESET;
        }
        // TODO: Reset from USB, NFC, LPCOMP...
        else
        {
            last_reset_info.reason = RESET_REASON_UNKNOWN;
        }
        last_reset_info.data = 0; // Not used
    }

    BKUP_Write(BKUP_REG1, 0x0);

    // Clear Reset info register
    // sd_power_reset_reason_clr(0xFFFFFFFF);
}

int HAL_Feature_Set(HAL_Feature feature, bool enabled) {
   switch (feature) {
        case FEATURE_RETAINED_MEMORY: {
            // TODO: Switch on backup SRAM clock
            // Switch on backup power regulator, so that it survives the deep sleep mode,
            // software and hardware reset. Power must be supplied to VIN or VBAT to retain SRAM values.
            return -1;
        }
        case FEATURE_RESET_INFO: {
            return Write_Feature_Flag(FEATURE_FLAG_RESET_INFO, enabled, NULL);
        }
#if HAL_PLATFORM_CLOUD_UDP
        case FEATURE_CLOUD_UDP: {
            const uint8_t data = (enabled ? 0xff : 0x00);
            return dct_write_app_data(&data, DCT_CLOUD_TRANSPORT_OFFSET, sizeof(data));
        }
#endif // HAL_PLATFORM_CLOUD_UDP
        case FEATURE_ETHERNET_DETECTION: {
            return Write_Feature_Flag(FEATURE_FLAG_ETHERNET_DETECTION, enabled, NULL);
        }
        case FEATURE_LED_OVERRIDDEN: {
            return Write_Feature_Flag(FEATURE_FLAG_LED_OVERRIDDEN, enabled, NULL);
        }
        case FEATURE_DISABLE_LISTENING_MODE: {
            return Write_Feature_Flag(FEATURE_FLAG_DISBLE_LISTENING_MODE, enabled, NULL);
        }
    }

    return -1;
}

bool HAL_Feature_Get(HAL_Feature feature) {
    switch (feature) {
        case FEATURE_CLOUD_UDP: {
            return true; // Mesh platforms are UDP-only
        }
        case FEATURE_RESET_INFO: {
            return true;
        }
        case FEATURE_ETHERNET_DETECTION: {
            bool value = false;
            return (Read_Feature_Flag(FEATURE_FLAG_ETHERNET_DETECTION, &value) == 0) ? value : false;
        }
        case FEATURE_LED_OVERRIDDEN: {
            bool value = false;
            return (Read_Feature_Flag(FEATURE_FLAG_LED_OVERRIDDEN, &value) == 0) ? value : false;
        }
        case FEATURE_DISABLE_LISTENING_MODE: {
            bool value = false;
            return (Read_Feature_Flag(FEATURE_FLAG_DISBLE_LISTENING_MODE, &value) == 0) ? value : false;
        }
    }
    return false;
}
